<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CatalogActivity">

    <item
        android:id="@+id/action_record_bluetooth"
        android:title="@string/bluetooth"
        android:icon="@drawable/ic_baseline_bluetooth_before_con_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_record_download_record"
        android:title="@string/bluetooth_download"
        android:icon="@drawable/ic_round_save_alt_24"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_record_new_record"
        android:title="@string/new_record"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_record_bluetooth_disconnect"
        android:title="@string/bluetooth_disconnect"
        app:showAsAction="never" />

</menu>