<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_profile_name"
                android:hint="@string/hint_profile_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle"
                android:autofillHints="false" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- Age field -->
                <EditText
                    android:id="@+id/edit_profile_age"
                    android:hint="@string/hint_profile_age"
                    android:inputType="number"
                    style="@style/EditorFieldStyle"
                    android:autofillHints="false" />

                <!-- Units for weight (cm) -->
                <TextView
                    android:id="@+id/label_age_units"
                    android:text="@string/unit_profile_age"
                    style="@style/EditorUnitsStyle"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <!-- Gender category -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_gender"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="0dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>

    </LinearLayout>

    <!-- Measurement category -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_measurement"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingStart="4dp"
                android:paddingEnd="0dp">

                <!-- Height field -->
                <EditText
                    android:id="@+id/edit_profile_height"
                    android:hint="@string/hint_profile_height"
                    android:inputType="number"
                    style="@style/EditorFieldStyle"
                    android:autofillHints="false" />

                <!-- Units for weight (cm) -->
                <TextView
                    android:id="@+id/label_view_height_units"
                    android:text="@string/unit_profile_height"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingStart="4dp"
                android:paddingEnd="0dp">

                <!-- Weight field -->
                <EditText
                    android:id="@+id/edit_profile_weight"
                    android:hint="@string/hint_profile_weight"
                    android:inputType="number"
                    style="@style/EditorFieldStyle"
                    android:autofillHints="false" />

                <!-- Units for weight (kg) -->
                <TextView
                    android:id="@+id/label_weight_units"
                    android:text="@string/unit_profile_weight"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>